feat(exposition): add roles to management resources

--- a/extensions/exposition/components/identity.basic/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.basic/manifest.toa.yaml
@@ -38,6 +38,7 @@ exposition:
   /:
     POST: incept
   /:id:
+    auth:role: system:identity:basic
     auth:scheme: basic
     auth:id: id
     PATCH: transit
