feat(exposition): add basic credentials constraints

--- a/extensions/exposition/components/identity.roles/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.roles/manifest.toa.yaml
@@ -3,8 +3,8 @@ name: roles
 
 entity:
   schema:
-    identity: string
-    role: string
+    identity*: string
+    role*: string
 
 operations:
   transit:
