test(exposition): add `principal`

--- a/extensions/exposition/components/identity.basic/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.basic/manifest.toa.yaml
@@ -33,11 +33,13 @@ operations:
 configuration:
   rounds: 10
   pepper: ''
+  principal: string
   username+: ^\S{1,16}$
   password+: ^\S{8,32}$
 
 exposition:
   /:
+    anonymous: true
     POST: incept
   /:id:
     auth:role: system:identity:basic
