--- a/extensions/exposition/components/identity.roles/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.roles/manifest.toa.yaml
@@ -14,6 +14,12 @@ operations:
       role*: string
   list:
     output: [string]
+  principal:
+    input:
+      id: string
+
+receivers:
+  identity.basic.principal: principal
 
 exposition:
   /:identity:
