--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -19,6 +19,9 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
+  "peerDependencies": {
+    "nopeable": "0.1.1"
+  },
   "dependencies": {
     "@rsql/parser": "1.2.4",
     "@toa.io/console": "0.20.0-dev.36",
