feat(exposition): add node isolation

--- a/extensions/exposition/components/identity.roles/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.roles/manifest.toa.yaml
@@ -22,6 +22,7 @@ receivers:
   identity.basic.principal: principal
 
 exposition:
+  isolated: true
   /:identity:
     auth:role: system:identity:roles
     POST: transit
