--- a/connectors/bridges.node/package.json
+++ b/connectors/bridges.node/package.json
@@ -25,12 +25,14 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
+  "peerDependencies": {
+    "nopeable": "0.1.1"
+  },
   "dependencies": {
     "@toa.io/core": "0.20.0-dev.36",
     "@toa.io/filesystem": "0.20.0-dev.36",
     "@toa.io/generic": "0.20.0-dev.36",
-    "fast-glob": "3.2.7",
-    "nopeable": "0.1.0"
+    "fast-glob": "3.2.7"
   },
   "devDependencies": {
     "clone-deep": "4.0.1"
