test: adjust integration tests to Nopeable

--- a/integration/context/a/manifest.toa.yaml
+++ b/integration/context/a/manifest.toa.yaml
@@ -28,6 +28,6 @@ receivers:
 extensions:
   exposition:
     /:
-      operations: [create]
+      POST: create
     /:id:
-      operations: [observe]
+      GET: observe
