--- a/integration/dummies/a/manifest.toa.yaml
+++ b/integration/dummies/a/manifest.toa.yaml
@@ -27,6 +27,6 @@ receivers:
 extensions:
   exposition:
     /:
-      operations: [create]
+      POST: create
     /:id:
-      operations: [observe]
+      GET: observe
