--- a/libraries/nope/package.json
+++ b/libraries/nope/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nopeable",
-  "version": "0.1.1",
+  "version": "0.2.0-dev.1",
   "description": "Nope",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
