--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "knex": "2.4.2",
     "mongodb": "5.7.0",
     "node-fetch": "2.6.11",
+    "nopable": "0.1.0",
     "randomstring": "1.3.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1"
