--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/core",
-  "version": "0.20.0-dev.36",
+  "version": "0.20.0-dev.38",
   "description": "Toa Core",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,13 +20,13 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "peerDependencies": {
-    "nopeable": "0.1.1"
+    "nopeable": "*"
   },
   "dependencies": {
     "@rsql/parser": "1.2.4",
-    "@toa.io/console": "0.20.0-dev.36",
-    "@toa.io/generic": "0.20.0-dev.36",
-    "@toa.io/yaml": "0.20.0-dev.36",
+    "@toa.io/console": "0.20.0-dev.38",
+    "@toa.io/generic": "0.20.0-dev.38",
+    "@toa.io/yaml": "0.20.0-dev.38",
     "clone-deep": "4.0.1"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
