--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -23,8 +23,7 @@
     "@toa.io/core": "0.20.0-dev.39",
     "@toa.io/generic": "0.20.0-dev.39",
     "@toa.io/http": "0.20.0-dev.21",
-    "@types/bcrypt": "5.0.0",
-    "bcrypt": "5.1.1",
+    "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "express": "4.18.2",
     "js-yaml": "4.1.0",
@@ -37,11 +36,11 @@
     "testEnvironment": "node"
   },
   "scripts": {
-    "install": "npm run transpile",
     "transpile": "npx tsc && npx tsc -p ./components/identity.basic && npx tsc -p ./components/identity.tokens",
     "features": "npx cucumber-js"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.3",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
     "@types/negotiator": "0.6.1"
