--- a/package.json
+++ b/package.json
@@ -70,9 +70,8 @@
     "test:all": "npm run ci && npm run test && npm run test:integration && npm run test:stage && npm run test:features",
     "lint": "npx eslint . --fix",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
-    "version:dev": "npx lerna@6.5.1 version --conventional-prerelease --preid dev --no-commit-hooks --no-changelog --yes --no-git-tag-version",
-    "publish:local": "npx lerna@6.5.1 publish from-package --force-publish --no-changelog --yes --no-git-tag-version --registry=http://localhost:4873",
-    "publish:canary": "npx lerna@6.5.1 publish --canary --conventional-prerelease --force-publish --preid dev --no-commit-hooks --no-changelog --yes --message \"ci: canary release\" --git-tag-command \"echo %s\" --sign-git-commit --registry=http://localhost:4873",
+    "version:local": "npx lerna@6.5.1 version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version",
+    "publish:local": "npm publish from-package -ws --registry=http://localhost:4873",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
