--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.exposition",
-  "version": "0.20.0-dev.40",
+  "version": "0.20.0-local.0",
   "description": "Toa Exposition",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,9 +20,9 @@
     "nopeable": "*"
   },
   "dependencies": {
-    "@toa.io/core": "0.20.0-dev.40",
-    "@toa.io/generic": "0.20.0-dev.40",
-    "@toa.io/http": "0.20.0-dev.22",
+    "@toa.io/core": "0.20.0-local.0",
+    "@toa.io/generic": "0.20.0-local.0",
+    "@toa.io/http": "0.20.0-local.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "express": "4.18.2",
