--- a/libraries/command/package.json
+++ b/libraries/command/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/command",
-  "version": "0.20.0-dev.40",
+  "version": "0.20.0-local.0",
   "description": "CommonJS wrapper for execa",
   "homepage": "https://toa.io",
   "author": {
