chore: rename release branches

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,7 +5,7 @@ on:
     types: [closed]
     branches:
       - main
-      - dev
+      - alpha
 
 jobs:
   build:
@@ -73,5 +73,5 @@ jobs:
             git merge main
             git push --all origin --no-verify
           else
-            npx lerna@6.5.1 publish --conventional-prerelease --preid dev --no-commit-hooks --no-changelog --yes --message "ci: prerelease" --git-tag-command "echo %s" --sign-git-commit
+            npx lerna@6.5.1 publish --conventional-prerelease --preid alpha --no-commit-hooks --no-changelog --yes --message "ci: prerelease" --git-tag-command "echo %s" --sign-git-commit
           fi
