fix(exposition): fix component paths resolution

--- a/extensions/exposition/components/context.toa.yaml
+++ b/extensions/exposition/components/context.toa.yaml
@@ -10,3 +10,6 @@ mongodb: mongodb://localhost
 configuration:
   identity.tokens:
     key0: k3.local.pIZT8-9Fa6U_QtfQHOSStfGtmyzPINyKQq2Xk-hd7vA
+
+realtime:
+  messages.created: [senderId, recipientId]
