--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "test:all": "npm run ci && npm run test && npm run test:integration && npm run test:stage && npm run test:features",
     "lint": "npx eslint . --fix",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
-    "version:local": "npx lerna@6.5.1 version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version",
+    "version:local": "npx lerna@6.5.1 version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version && git commit -am 'chore: local bump' --no-verify",
     "publish:local": "npm publish from-package -ws --registry=http://localhost:4873",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
