--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
     "version:local": "npx lerna@6.5.1 version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version && git commit -am 'chore: local bump' --no-verify",
     "publish:local": "npm publish from-package -ws --registry=http://localhost:4873",
+    "ci:local": "npm run version:local && npm run publish:local",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
