--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "test:features": "npx cucumber-js && npm run test:features --workspaces --if-present",
     "test:samples:unit": "toa replay userland/example/components/*",
     "test:samples:all": "TOA_DEV=1 toa replay userland/example",
-    "test:all": "npm run ci && npm run test && npm run test:integration && npm run test:stage && npm run test:features",
+    "test:all": "npm run test && npm run test:integration && npm run test:stage && npm run test:features",
     "lint": "npx eslint . --fix",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
     "version:local": "npx lerna@6.5.1 version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version && git commit -am 'chore: local bump' --no-verify",
