--- a/libraries/console/package.json
+++ b/libraries/console/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/console",
-  "version": "0.20.0-local.8",
+  "version": "0.20.0-alpha.0",
   "description": "Toa Console",
   "homepage": "https://toa.io",
   "author": {
