--- a/libraries/generic/package.json
+++ b/libraries/generic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/generic",
-  "version": "0.20.0-local.8",
+  "version": "0.20.0-alpha.0",
   "description": "Toa Generic Tools",
   "homepage": "https://toa.io",
   "author": {
