--- a/userland/package.json
+++ b/userland/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/userland",
-  "version": "0.20.0-local.8",
+  "version": "0.20.0-alpha.0",
   "description": "Toa development kit",
   "homepage": "https://toa.io",
   "author": {
@@ -24,14 +24,14 @@
   "main": "src/index.js",
   "types": "types/index.d.ts",
   "dependencies": {
-    "@toa.io/boot": "0.20.0-local.8",
-    "@toa.io/core": "0.20.0-local.8",
-    "@toa.io/filesystem": "0.20.0-local.8",
-    "@toa.io/generic": "0.20.0-local.8",
-    "@toa.io/norm": "0.20.0-local.8",
-    "@toa.io/schemas": "0.20.0-local.8",
-    "@toa.io/storages.null": "0.20.0-local.8",
-    "@toa.io/yaml": "0.20.0-local.8",
+    "@toa.io/boot": "0.20.0-alpha.0",
+    "@toa.io/core": "0.20.0-alpha.0",
+    "@toa.io/filesystem": "0.20.0-alpha.0",
+    "@toa.io/generic": "0.20.0-alpha.0",
+    "@toa.io/norm": "0.20.0-alpha.0",
+    "@toa.io/schemas": "0.20.0-alpha.0",
+    "@toa.io/storages.null": "0.20.0-alpha.0",
+    "@toa.io/yaml": "0.20.0-alpha.0",
     "tap": "16.3.4"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
