--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -23,7 +23,8 @@
     "@toa.io/core": "0.20.0-alpha.1",
     "@toa.io/generic": "0.20.0-alpha.1",
     "@toa.io/pointer": "0.20.0-alpha.1",
-    "mongodb": "5.8.0"
+    "mongodb": "5.8.0",
+    "saslprep": "1.0.3"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
