style: update code style

--- a/extensions/realtime/components/streams/manifest.toa.yaml
+++ b/extensions/realtime/components/streams/manifest.toa.yaml
@@ -6,8 +6,8 @@ operations:
     input: string
   push:
     input:
-      key: string
-      event: string
+      key*: string
+      event*: string
       data: ~
 
 state: ~
