test(realtime): fix scenario

--- a/extensions/realtime/package.json
+++ b/extensions/realtime/package.json
@@ -24,6 +24,7 @@
     "testEnvironment": "node"
   },
   "scripts": {
-    "transpile": "npx tsc && npx tsc -p ./components/streams"
+    "transpile": "npx tsc && npx tsc -p ./components/streams",
+    "features": "npx cucumber-js"
   }
 }
