test: fix tests

--- a/extensions/exposition/schemas/annotation.cos.yaml
+++ b/extensions/exposition/schemas/annotation.cos.yaml
@@ -1,5 +1,5 @@
-host?: string
-class?: string
-annotations?: <string>
-debug?: boolean
-/?: ref:node
+host: string
+class: string
+annotations: <string>
+debug: boolean
+/: ~
