--- a/extensions/exposition/schemas/method.cos.yaml
+++ b/extensions/exposition/schemas/method.cos.yaml
@@ -1,8 +1,8 @@
 verb: /^(GET|POST|PUT|PATCH|DELETE)$/
 mapping:
-  namespace?: string
-  component?: string
+  namespace: string
+  component: string
   endpoint: string
-  query?:
+  query:
     $ref: query
 directives: [ref:directive]
