chore: add cleanup to transpile script

--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -38,7 +38,9 @@
     "testEnvironment": "node"
   },
   "scripts": {
-    "transpile": "npx tsc && npx tsc -p ./components/identity.basic && npx tsc -p ./components/identity.tokens",
+    "transpile": "rm -rf transpiled && npx tsc && npm run transpile:basic && npm run transpile:tokens",
+    "transpile:basic": "rm -rf ./components/identity.basic/operations && npx tsc -p ./components/identity.basic",
+    "transpile:tokens": "rm -rf ./components/identity.tokens/operations && npx tsc -p ./components/identity.tokens",
     "features": "npx cucumber-js"
   },
   "devDependencies": {
