--- a/extensions/storages/package.json
+++ b/extensions/storages/package.json
@@ -25,11 +25,13 @@
     "transpile": "rm -rf transpiled && npx tsc"
   },
   "devDependencies": {
-    "@toa.io/match": "0.2.1",
     "@toa.io/streams": "0.1.0-alpha.2",
     "@types/fs-extra": "11.0.3"
   },
   "dependencies": {
-    "@toa.io/generic": "0.20.0-alpha.2"
+    "@toa.io/generic": "0.20.0-alpha.2",
+    "@toa.io/match": "0.3.0",
+    "fs-extra": "11.1.1",
+    "msgpackr": "1.9.9"
   }
 }
