--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -48,6 +48,7 @@ overrides:
       '@typescript-eslint/member-ordering': error
       '@typescript-eslint/explicit-member-accessibility': error
       '@typescript-eslint/no-confusing-void-expression': off
+      no-void: off
 parserOptions:
   project: ./tsconfig.json
 env:
