--- a/extensions/storages/package.json
+++ b/extensions/storages/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.435.0",
+    "@aws-sdk/lib-storage": "3.437.0",
+    "@toa.io/extensions.storages": "file:",
     "@toa.io/generic": "0.20.0-alpha.2",
     "fs-extra": "11.1.1",
     "msgpackr": "1.9.9"
