feat: add storages (#421)
* docs(storages): add readme

* docs(storages): add providers

* feat(storages): add filesystem provider

* feat(storages): add provider method `move`

* docs(storages): add providers/readme

* feat(storages): add `tmp` provider

* docs(storages): add a link

* style: add `readonly` modifier to `path`

* test(storages): remove redundant handle.close from tests

* refactor(storages): remove `link` method from the Provider interface

* chore: add cleanup to transpile script

* refactor(realtime): replace object with map

* feat(storages): add checksum

* feat(storages): add magic numbers

* feat(storages): add hide, list

* feat(storages): add annotate

* feat(storages): add `fork`

* fix(storages): replace concatenation with `posix.join`

* refactor(storages): remove `match`

* feat(storages): add fetch

* test(storages): fix `tmp` url

* test(storage): add top level entry test

* docs(storage): fix provider development

* test(storages): add test for malformed url for filesystem provider

* docs(storages): remove lie

* docs(storages): remove lie

* feat(storages): add trust for unknown types

* style(storages): rename variables

* feat(storages): add signatures for jxl and avif

* fix(storages): close file handles

* test(storages): add empty file handling

* docs(storages): add missing known types

* feat(storages): add size

* style(storages): rename variables

* style(storages): remove redundant stream options

* docs(storages): fix link

* docs(storages): move deduplication section

* docs: add reference to `storages`

* style(storages): rename Detector to Scanner

* refactor(storages): optimize listing

* feat(storages): add entries permutation

* docs(storages): remove `hidden`

* feat(storages): add `NOT_FOUND` to `conceal` and `reveal`

* docs: update BLOB storage description

* docs(storages): fix sentence

* feat(storages): add `delete`

*

--- a/extensions/storages/package.json
+++ b/extensions/storages/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@toa.io/extensions.realtime",
-  "version": "0.0.0",
-  "description": "Toa Realtime",
+  "name": "@toa.io/extensions.storages",
+  "version": "0.20.0-alpha.2",
+  "description": "Toa Storages",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
   "main": "transpiled/index.js",
@@ -16,15 +16,22 @@
   "publishConfig": {
     "access": "public"
   },
-  "peerDependencies": {
-    "nopeable": "*"
-  },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
   },
   "scripts": {
-    "transpile": "rm -rf transpiled && npx tsc && rm -rf ./components/streams/operations && npx tsc -p ./components/streams",
-    "features": "npx cucumber-js"
+    "test": "jest",
+    "transpile": "rm -rf transpiled && npx tsc"
+  },
+  "devDependencies": {
+    "@toa.io/match": "0.3.0",
+    "@toa.io/streams": "0.1.0-alpha.2",
+    "@types/fs-extra": "11.0.3"
+  },
+  "dependencies": {
+    "@toa.io/generic": "0.20.0-alpha.2",
+    "fs-extra": "11.1.1",
+    "msgpackr": "1.9.9"
   }
 }
