chore: manually bump version

--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.exposition",
-  "version": "0.21.0-alpha.0",
+  "version": "0.22.0-dev.0",
   "description": "Toa Exposition",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,11 +20,11 @@
     "nopeable": "*"
   },
   "dependencies": {
-    "@toa.io/core": "0.21.0-alpha.0",
-    "@toa.io/generic": "0.20.1-alpha.0",
-    "@toa.io/http": "0.20.1-alpha.0",
-    "@toa.io/schemas": "0.20.1-alpha.0",
-    "@toa.io/streams": "0.2.0-alpha.0",
+    "@toa.io/core": "0.22.0-dev.0",
+    "@toa.io/generic": "0.22.0-dev.0",
+    "@toa.io/http": "0.22.0-dev.0",
+    "@toa.io/schemas": "0.22.0-dev.0",
+    "@toa.io/streams": "0.22.0-dev.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "express": "4.18.2",
