--- a/libraries/yaml/package.json
+++ b/libraries/yaml/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/yaml",
-  "version": "0.20.1-alpha.0",
+  "version": "0.22.0-dev.0",
   "description": "Toa YAML",
   "homepage": "https://toa.io",
   "author": {
@@ -24,8 +24,8 @@
   "main": "source/index.js",
   "types": "types/index.d.ts",
   "dependencies": {
-    "@toa.io/filesystem": "0.20.1-alpha.0",
-    "@toa.io/generic": "0.20.1-alpha.0",
+    "@toa.io/filesystem": "0.22.0-dev.0",
+    "@toa.io/generic": "0.22.0-dev.0",
     "js-yaml": "4.1.0"
   },
   "devDependencies": {
