--- a/runtime/norm/package.json
+++ b/runtime/norm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/norm",
-  "version": "0.21.0-alpha.0",
+  "version": "0.22.0-dev.0",
   "description": "Toa declarations normalization and validation",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,11 +20,11 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "0.21.0-alpha.0",
-    "@toa.io/generic": "0.20.1-alpha.0",
-    "@toa.io/schema": "0.20.1-alpha.0",
-    "@toa.io/schemas": "0.20.1-alpha.0",
-    "@toa.io/yaml": "0.20.1-alpha.0"
+    "@toa.io/core": "0.22.0-dev.0",
+    "@toa.io/generic": "0.22.0-dev.0",
+    "@toa.io/schema": "0.22.0-dev.0",
+    "@toa.io/schemas": "0.22.0-dev.0",
+    "@toa.io/yaml": "0.22.0-dev.0"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
