--- a/types/package.json
+++ b/types/package.json
@@ -15,8 +15,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f",
-  "peerDependencies": {
-    "nopeable": "*"
-  }
+  "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
