--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -25,7 +25,7 @@ jobs:
       - run: npm install
       - run: npm test
 
-  publish:
+  version:
     if: github.event.pull_request.merged == true
     needs: test
     runs-on: ubuntu-latest
