--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,16 @@
 version: "3.9"
 services:
+  localstack:
+    image: localstack/localstack
+    ports:
+      - '127.0.0.1:4566:4566'
+      - '127.0.0.1:4510-4559:4510-4559'
+    environment:
+      - SERVICES=s3
+      - AWS_ACCESS_KEY_ID=test_access_key
+      - AWS_SECRET_ACCESS_KEY=test_secret_access_key
+    volumes:
+      - './localstack_init.sh:/etc/localstack/init/ready.d/init-aws.sh'
   verdaccio:
     image: verdaccio/verdaccio:5.10.2
     ports: ['4873:4873']
