--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -20,6 +20,7 @@
     "@toa.io/core": "0.22.1",
     "@toa.io/generic": "0.22.0",
     "@toa.io/http": "0.22.0",
+    "@toa.io/match": "0.3.1",
     "@toa.io/schemas": "0.22.0",
     "@toa.io/streams": "0.22.0",
     "bcryptjs": "2.4.3",
