--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -22,11 +22,7 @@
     "@toa.io/pointer": "0.22.0",
     "@toa.io/schemas": "0.22.0",
     "comq": "0.10.1",
-    "msgpackr": "1.9.5",
-    "node-fetch": "2.6.7"
-  },
-  "devDependencies": {
-    "@types/node-fetch": "2.6.2"
+    "msgpackr": "1.9.5"
   },
   "scripts": {
     "transpile": "tsc"
