--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -39,6 +39,7 @@
     "transpile": "rm -rf transpiled && npx tsc && npm run transpile:basic && npm run transpile:tokens",
     "transpile:basic": "rm -rf ./components/identity.basic/operations && npx tsc -p ./components/identity.basic",
     "transpile:tokens": "rm -rf ./components/identity.tokens/operations && npx tsc -p ./components/identity.tokens",
+    "test": "jest",
     "features": "npx cucumber-js"
   },
   "devDependencies": {
