feat(exposition): add basic `octets` directives

--- a/extensions/exposition/components/octets.storage/manifest.toa.yaml
+++ b/extensions/exposition/components/octets.storage/manifest.toa.yaml
@@ -9,3 +9,16 @@ operations:
     input:
       storage*: string
       request*: ~
+  fetch: &simple
+    bindings: ~
+    input:
+      storage*: string
+      path*: ~
+  list: *simple
+  delete: *simple
+  permute:
+    bindings: ~
+    input:
+      storage*: string
+      path*: ~
+      list*: [string]
