feat(exposition): add trailing slash rules to `octets`

--- a/extensions/exposition/components/octets.storage/manifest.toa.yaml
+++ b/extensions/exposition/components/octets.storage/manifest.toa.yaml
@@ -13,12 +13,12 @@ operations:
     bindings: ~
     input:
       storage*: string
-      path*: ~
+      path*: string
   list: *simple
   delete: *simple
   permute:
     bindings: ~
     input:
       storage*: string
-      path*: ~
+      path*: string
       list*: [string]
