--- a/libraries/http/package.json
+++ b/libraries/http/package.json
@@ -34,6 +34,7 @@
     "transpile": "tsc"
   },
   "dependencies": {
-    "http-parser-js": "0.5.8"
+    "http-parser-js": "0.5.8",
+    "negotiator": "0.6.3"
   }
 }
