refactor(exposition): add type control

--- a/extensions/exposition/components/octets.storage/manifest.toa.yaml
+++ b/extensions/exposition/components/octets.storage/manifest.toa.yaml
@@ -9,6 +9,7 @@ operations:
     input:
       storage*: string
       request*: ~
+      accept: string
   fetch: &simple
     bindings: ~
     input:
