--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -20,7 +20,7 @@
     "@toa.io/core": "0.22.1",
     "@toa.io/generic": "0.22.0",
     "@toa.io/http": "0.22.0",
-    "@toa.io/match": "0.3.1",
+    "@toa.io/match": "0.3.4",
     "@toa.io/schemas": "0.22.0",
     "@toa.io/streams": "0.22.0",
     "bcryptjs": "2.4.3",
@@ -43,6 +43,7 @@
     "features": "npx cucumber-js"
   },
   "devDependencies": {
+    "@toa.io/extensions.storages": "0.22.0",
     "@types/bcryptjs": "2.4.3",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
