--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -24,7 +24,8 @@
     "@toa.io/console": "0.22.0",
     "@toa.io/generic": "0.22.0",
     "@toa.io/yaml": "0.22.0",
-    "clone-deep": "4.0.1"
+    "clone-deep": "4.0.1",
+    "error-value": "0.3.0"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
