--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -25,6 +25,7 @@
     "@toa.io/streams": "0.22.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
+    "error-value": "0.3.0",
     "express": "4.18.2",
     "js-yaml": "4.1.0",
     "msgpackr": "1.9.5",
@@ -42,6 +43,7 @@
     "features": "npx cucumber-js"
   },
   "devDependencies": {
+    "@toa.io/extensions.storages": "0.22.2-dev.0",
     "@types/bcryptjs": "2.4.3",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
