--- a/extensions/storages/package.json
+++ b/extensions/storages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.storages",
-  "version": "0.22.0",
+  "version": "0.22.2-dev.0",
   "description": "Toa Storages",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -25,7 +25,6 @@
     "transpile": "rm -rf transpiled && npx tsc"
   },
   "devDependencies": {
-    "@toa.io/match": "0.3.0",
     "@toa.io/streams": "0.22.0",
     "@types/fs-extra": "11.0.3",
     "dotenv": "16.3.1"
