--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -22,6 +22,7 @@
     "@toa.io/http": "0.22.0",
     "@toa.io/schemas": "0.22.0",
     "@toa.io/streams": "0.22.0",
+    "@tusbar/cache-control": "1.0.1",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "express": "4.18.2",
