feat(exposition): add `meta` flag to `octets:fetch`

--- a/extensions/exposition/components/octets.storage/manifest.toa.yaml
+++ b/extensions/exposition/components/octets.storage/manifest.toa.yaml
@@ -15,6 +15,7 @@ operations:
     input:
       storage*: string
       path*: string
+  get: *simple
   list: *simple
   delete: *simple
   permute:
