test(exposition): update `octets:store` workflow

--- a/extensions/exposition/features/steps/components/octets.meta/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/octets.meta/manifest.toa.yaml
@@ -4,7 +4,9 @@ name: meta
 storages: octets
 
 operations:
-  foo:
+  foo: &operation
     input:
       path*: string
       entry: object
+  bar: *operation
+  baz: *operation
