feat(exposition): add variant fetching

--- a/extensions/exposition/features/steps/components/octets.tester/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/octets.tester/manifest.toa.yaml
@@ -1,13 +1,15 @@
 namespace: octets
-name: meta
+name: tester
 
 storages: octets
 
 operations:
   foo: &operation
     input:
+      storage*: string
       path*: string
       entry: object
   bar: *operation
   baz: *operation
   err: *operation
+  diversify: *operation
