--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -25,6 +25,7 @@
     "@toa.io/streams": "0.22.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
+    "error-value": "0.3.0",
     "express": "4.18.2",
     "js-yaml": "4.1.0",
     "msgpackr": "1.9.5",
@@ -47,8 +48,7 @@
     "@types/bcryptjs": "2.4.3",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
-    "@types/negotiator": "0.6.1",
-    "error-value": "0.3.0"
+    "@types/negotiator": "0.6.1"
   },
   "gitHead": "24d68d70a56717f2f4441cc9884a60f9fee0863e"
 }
