--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -20,7 +20,6 @@
     "@toa.io/core": "0.22.2-dev.0",
     "@toa.io/generic": "0.22.0",
     "@toa.io/http": "0.22.0",
-    "@toa.io/match": "0.3.5",
     "@toa.io/schemas": "0.22.1-dev.0",
     "@toa.io/streams": "0.22.0",
     "bcryptjs": "2.4.3",
@@ -28,6 +27,7 @@
     "error-value": "0.3.0",
     "express": "4.18.2",
     "js-yaml": "4.1.0",
+    "matchacho": "0.3.5",
     "msgpackr": "1.9.5",
     "negotiator": "0.6.3",
     "paseto": "3.1.4"
