--- a/extensions/storages/package.json
+++ b/extensions/storages/package.json
@@ -33,9 +33,9 @@
     "@aws-sdk/client-s3": "3.435.0",
     "@aws-sdk/lib-storage": "3.437.0",
     "@toa.io/generic": "0.20.0-alpha.2",
-    "@toa.io/match": "0.3.5",
     "error-value": "0.3.0",
     "fs-extra": "11.1.1",
+    "matchacho": "0.3.5",
     "msgpackr": "1.9.9"
   }
 }
