--- a/package.json
+++ b/package.json
@@ -62,10 +62,10 @@
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries features userland",
     "test:stage": "npx jest --roots userland/example/stage --testPathIgnorePatterns .*/transpiled/",
     "test:integration": "npx jest --roots integration --runInBand --testTimeout 180000",
-    "test:features": "npx cucumber-js && npm run features --workspaces --if-present",
+    "features": "npx cucumber-js && npm run features --workspaces --if-present",
     "test:samples:unit": "toa replay userland/example/components/*",
     "test:samples:all": "TOA_DEV=1 toa replay userland/example",
-    "test:all": "npm run test && npm run test:integration && npm run test:stage && npm run test:features",
+    "test:all": "npm run test && npm run test:integration && npm run test:stage && npm run features",
     "lint": "npx eslint . --fix",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
     "version:local": "npx lerna@7.3.0 version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version && git commit -am 'chore: local bump' --no-verify",
