--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.origins",
-  "version": "0.22.2-dev.0",
+  "version": "0.23.0-local.0",
   "description": "Toa Origins",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -17,10 +17,10 @@
   "main": "transpiled/index.js",
   "types": "transpiled/index.d.ts",
   "dependencies": {
-    "@toa.io/core": "0.22.2-dev.0",
-    "@toa.io/generic": "0.22.0",
-    "@toa.io/pointer": "0.22.1-dev.0",
-    "@toa.io/schemas": "0.22.1-dev.0",
+    "@toa.io/core": "0.23.0-local.0",
+    "@toa.io/generic": "0.23.0-local.0",
+    "@toa.io/pointer": "0.22.1-local.0",
+    "@toa.io/schemas": "0.22.1-local.0",
     "comq": "0.10.1",
     "msgpackr": "1.9.5"
   },
