--- a/extensions/realtime/package.json
+++ b/extensions/realtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.realtime",
-  "version": "0.22.1",
+  "version": "0.22.2-local.0",
   "description": "Toa Realtime",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
