--- a/libraries/conveyor/package.json
+++ b/libraries/conveyor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/conveyor",
-  "version": "0.22.0",
+  "version": "0.22.1-local.0",
   "description": "Toa Conveyor",
   "homepage": "https://toa.io",
   "author": {
@@ -23,7 +23,7 @@
   },
   "main": "source/index.js",
   "devDependencies": {
-    "@toa.io/generic": "0.22.0"
+    "@toa.io/generic": "0.23.0-local.0"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
