--- a/libraries/dns/package.json
+++ b/libraries/dns/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/dns",
-  "version": "0.22.0",
+  "version": "0.22.1-local.0",
   "description": "Toa DNS Tools",
   "homepage": "https://toa.io",
   "author": {
