--- a/libraries/http/package.json
+++ b/libraries/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/http",
-  "version": "0.23.0-local.0",
+  "version": "0.22.2-dev.3",
   "description": "Text-level HTTP client",
   "homepage": "https://toa.io",
   "author": {
