--- a/libraries/kubernetes/package.json
+++ b/libraries/kubernetes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/kubernetes",
-  "version": "0.22.1-local.0",
+  "version": "0.22.2-dev.3",
   "description": "kubectl/kubectx wrapper",
   "homepage": "https://toa.io",
   "author": {
@@ -31,6 +31,6 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "@toa.io/command": "0.22.1-local.0"
+    "@toa.io/command": "0.22.2-dev.3"
   }
 }
