--- a/libraries/mock/package.json
+++ b/libraries/mock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/mock",
-  "version": "0.22.1-local.0",
+  "version": "0.22.2-dev.3",
   "description": "Toa Mocks",
   "homepage": "https://toa.io",
   "author": {
@@ -24,7 +24,7 @@
   "main": "source/index.js",
   "types": "types/index.d.ts",
   "dependencies": {
-    "@toa.io/generic": "0.23.0-local.0"
+    "@toa.io/generic": "0.22.2-dev.3"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
