--- a/libraries/pointer/package.json
+++ b/libraries/pointer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/pointer",
-  "version": "0.22.1-local.0",
+  "version": "0.22.2-dev.3",
   "description": "Toa Pointer",
   "homepage": "https://toa.io",
   "author": {
@@ -24,9 +24,9 @@
   "main": "transpiled/index.js",
   "types": "transpiled/index.d.ts",
   "dependencies": {
-    "@toa.io/dns": "0.22.1-local.0",
-    "@toa.io/generic": "0.23.0-local.0",
-    "@toa.io/schemas": "0.22.1-local.0"
+    "@toa.io/dns": "0.22.2-dev.3",
+    "@toa.io/generic": "0.22.2-dev.3",
+    "@toa.io/schemas": "0.22.2-dev.3"
   },
   "scripts": {
     "transpile": "tsc"
