--- a/libraries/schemas/package.json
+++ b/libraries/schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/schemas",
-  "version": "0.22.1-local.0",
+  "version": "0.22.2-dev.3",
   "description": "Toa Schemas",
   "homepage": "https://toa.io",
   "author": {
@@ -24,10 +24,10 @@
   "main": "source/index.js",
   "types": "types/index.d.ts",
   "dependencies": {
-    "@toa.io/concise": "0.22.1-local.0",
-    "@toa.io/filesystem": "0.22.1-local.0",
-    "@toa.io/generic": "0.23.0-local.0",
-    "@toa.io/yaml": "0.22.1-local.0",
+    "@toa.io/concise": "0.22.2-dev.3",
+    "@toa.io/filesystem": "0.22.2-dev.3",
+    "@toa.io/generic": "0.22.2-dev.3",
+    "@toa.io/yaml": "0.22.2-dev.3",
     "ajv": "8.12.0",
     "ajv-formats": "2.1.1",
     "better-ajv-errors": "1.2.0"
