--- a/libraries/streams/package.json
+++ b/libraries/streams/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/streams",
-  "version": "0.22.1-local.0",
+  "version": "0.22.2-dev.3",
   "description": "Stream utilities",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
