--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/core",
-  "version": "0.23.0-local.0",
+  "version": "0.22.2-dev.3",
   "description": "Toa Core",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -21,9 +21,9 @@
   },
   "dependencies": {
     "@rsql/parser": "1.2.4",
-    "@toa.io/console": "0.22.1-local.0",
-    "@toa.io/generic": "0.23.0-local.0",
-    "@toa.io/yaml": "0.22.1-local.0",
+    "@toa.io/console": "0.22.2-dev.3",
+    "@toa.io/generic": "0.22.2-dev.3",
+    "@toa.io/yaml": "0.22.2-dev.3",
     "clone-deep": "4.0.1",
     "error-value": "0.3.0"
   },
