--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "lint": "npx eslint . --fix",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
     "version:local": "npx lerna@7.3.0 version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version && git commit -am 'chore: local bump' --no-verify",
-    "publish:local": "npm publish from-package -ws --registry=http://localhost:4873",
+    "publish:local": "npm publish -ws --registry=http://localhost:4873",
     "ci:local": "npm run version:local && npm run publish:local",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
