--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -26,6 +26,7 @@
     "cors": "2.8.5",
     "express": "4.18.2",
     "js-yaml": "4.1.0",
+    "matchacho": "0.3.5",
     "msgpackr": "1.9.5",
     "negotiator": "0.6.3",
     "paseto": "3.1.4"
