feat(connectors): add mongodb sharded cluster to docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,35 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: developer
       MONGO_INITDB_ROOT_PASSWORD: secret
+  mongos:
+    image: 'bitnami/mongodb-sharded:latest'
+    hostname: mongos
+    environment:
+      - MONGODB_SHARDING_MODE=mongos
+      - MONGODB_CFG_PRIMARY_HOST=mongodb-cfg
+      - MONGODB_CFG_REPLICA_SET_NAME=cfgreplicaset
+      - MONGODB_REPLICA_SET_KEY=replicasetkey123
+      - MONGODB_ROOT_PASSWORD=password123
+    ports:
+      - "27017:27017"
+  mongodb-shard0-primary:
+    image: 'bitnami/mongodb-sharded:latest'
+    environment:
+      - MONGODB_SHARDING_MODE=shardsvr
+      - MONGODB_MONGOS_HOST=mongos
+      - MONGODB_ROOT_PASSWORD=password123
+      - MONGODB_REPLICA_SET_MODE=primary
+      - MONGODB_REPLICA_SET_KEY=replicasetkey123
+      - MONGODB_REPLICA_SET_NAME=shard0
+  mongodb-configsvr-primary:
+    image: 'bitnami/mongodb-sharded:latest'
+    hostname: mongodb-cfg
+    environment:
+      - MONGODB_SHARDING_MODE=configsvr
+      - MONGODB_ROOT_PASSWORD=password123
+      - MONGODB_REPLICA_SET_MODE=primary
+      - MONGODB_REPLICA_SET_KEY=replicasetkey123
+      - MONGODB_REPLICA_SET_NAME=cfgreplicaset
   postgres:
     image: postgres:14.4
     ports: ['5432:5432']
