--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,7 +32,7 @@ jobs:
 
   publish:
     if: github.event.pull_request.merged == true
-    needs: build
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
